Update index.html add review badge

--- a/index.html
+++ b/index.html
@@ -895,6 +895,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section class="hero">
             <h1>AI-powered science homework help</h1>
             <p>Get step-by-step solutions and detailed explanations for your chemistry, physics, and biology questions using advanced AI.</p>
+            <div class="trust-badge-container" style="text-align: center; margin: 20px 0 30px 0; animation: fadeIn 0.6s ease-out;">
+    <div class="trust-badge" style="display: inline-flex; align-items: center; gap: 10px; background: rgba(59, 130, 246, 0.08); padding: 10px 20px; border-radius: 50px; border: 1px solid rgba(59, 130, 246, 0.2);">
+        <span class="trust-stars" style="color: #fbbf24; font-size: 16px; letter-spacing: 2px;">★★★★★</span>
+        <span class="trust-text" style="font-size: 14px; color: #6B7280; font-weight: 500;">
+            Trusted by over <strong style="color: #3B82F6; font-weight: 600;">5k students</strong> from <strong style="color: #3B82F6; font-weight: 600;">100+ universities</strong>
+        </span>
+    </div>
+</div>
             <a href="#" class="btn btn-primary" onclick="showModal('signup'); return false;">Try it now</a>
         </section>
 
@@ -1791,6 +1799,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
