--- a/index.html
+++ b/index.html
@@ -1129,21 +1129,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 <style>
-    /* Enhanced question input section */
+/* Enhanced question input section - glow around the outside */
 .app-section {
-    background: linear-gradient(135deg, rgba(59, 130, 246, 0.1), rgba(139, 92, 246, 0.05)) !important;
-    border: 1px solid rgba(255, 255, 255, 0.1) !important;
-    box-shadow: 0 4px 20px rgba(59, 130, 246, 0.15), inset 0 1px 0 rgba(255, 255, 255, 0.1) !important;
-    backdrop-filter: blur(10px);
+    position: relative;
     animation: pulseGlow 4s ease-in-out infinite;
+}
+
+.app-section::before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: linear-gradient(135deg, rgba(59, 130, 246, 0.3), rgba(139, 92, 246, 0.2));
+    border-radius: 18px;
+    z-index: -1;
+    filter: blur(8px);
+    opacity: 0.7;
 }
 
 @keyframes pulseGlow {
     0%, 100% {
-        box-shadow: 0 4px 20px rgba(59, 130, 246, 0.15), inset 0 1px 0 rgba(255, 255, 255, 0.1) !important;
+        filter: drop-shadow(0 0 15px rgba(59, 130, 246, 0.4));
     }
     50% {
-        box-shadow: 0 6px 30px rgba(59, 130, 246, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.15) !important;
+        filter: drop-shadow(0 0 25px rgba(59, 130, 246, 0.6));
     }
 }
 .strength-bar {
@@ -2078,6 +2089,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
