--- a/index.html
+++ b/index.html
@@ -1129,32 +1129,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 <style>
-/* Enhanced question input section - glow around the outside */
+/* Enhanced question input section - external glow only */
 .app-section {
-    position: relative;
     animation: pulseGlow 4s ease-in-out infinite;
-}
-
-.app-section::before {
-    content: '';
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    background: linear-gradient(135deg, rgba(59, 130, 246, 0.3), rgba(139, 92, 246, 0.2));
-    border-radius: 18px;
-    z-index: -1;
-    filter: blur(8px);
-    opacity: 0.7;
 }
 
 @keyframes pulseGlow {
     0%, 100% {
-        filter: drop-shadow(0 0 15px rgba(59, 130, 246, 0.4));
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05), 0 0 20px rgba(59, 130, 246, 0.3);
     }
     50% {
-        filter: drop-shadow(0 0 25px rgba(59, 130, 246, 0.6));
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05), 0 0 30px rgba(59, 130, 246, 0.5);
     }
 }
 .strength-bar {
@@ -2089,6 +2074,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
