--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="response-section" id="responseSection">
                 <div class="loading" id="loadingIndicator">
                     <div class="spinner"></div>
-                    <p style="color: var(--text-secondary);">Claude is analyzing your question...</p>
+                    <p style="color: var(--text-secondary);">HomeworkHippo is analyzing your question...</p>
                 </div>
                 <div class="response-content" id="responseContent"></div>
             </div>
@@ -2276,6 +2276,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
