--- a/index.html
+++ b/index.html
@@ -882,12 +882,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
     </svg>
 </a>
-            <div class="nav-links">
-                <a href="#features">Features</a>
-                <a href="#pricing">Pricing</a>
-                <button class="btn btn-secondary" onclick="showModal('login')">Sign in</button>
-                <button class="btn btn-primary" onclick="showSubscriptionModal()">Subscribe Now</button>
-            </div>
+           <div class="nav-links">
+    <a href="#features">Features</a>
+    <a href="#pricing">Pricing</a>
+    <button class="btn btn-primary" onclick="showModal('login')">Sign In</button>
+</div>
         </nav>
     </header>
 
@@ -2423,6 +2422,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
