--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             text-align: center;
             box-shadow: var(--shadow-lg);
             position: relative;
-            overflow: hidden;
+            overflow: visible;
         }
 
         .pricing-card::before {
@@ -1142,7 +1142,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         
         <!-- Unlimited Plan -->
         <div class="pricing-card" style="border: 2px solid var(--accent-orange); transform: scale(1.05); position: relative; padding-top: 50px;">
-    <div style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); background: linear-gradient(135deg, var(--accent-orange), var(--accent-purple)); color: white; padding: 4px 20px; border-radius: 100px; font-size: 12px; font-weight: 600; z-index: 10;">
+    <div style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); background: linear-gradient(135deg, var(--accent-orange), var(--accent-purple)); color: white; padding: 4px 20px; border-radius: 100px; font-size: 12px; font-weight: 600; z-index: 100;">
         MOST POPULAR
     </div>
             <h3>Unlimited</h3>
@@ -2484,6 +2484,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
