--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         
         <!-- Unlimited Plan -->
-        <div class="pricing-card" style="border: 2px solid var(--accent-orange); transform: scale(1.05); position: relative; padding-top: 50px;">
+        <div class="pricing-card" style="border: 2px solid var(--accent-orange); position: relative; padding-top: 50px;">
     <div style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); background: linear-gradient(135deg, var(--accent-orange), var(--accent-purple)); color: white; padding: 4px 20px; border-radius: 100px; font-size: 12px; font-weight: 600; z-index: 100;">
         MOST POPULAR
     </div>
@@ -2484,6 +2484,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
