--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     padding: 40px;
     max-width: 400px;
     width: 400px;
-    height: 550px;
+    height: 575px;
     margin: 0 auto;
     text-align: center;
     box-shadow: var(--shadow-xl);
@@ -1170,7 +1170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         
         <!-- Unlimited Plan -->
-        <div class="pricing-card" style="border: 2px solid var(--accent-orange); position: relative; padding-top: 50px;">
+        <div class="pricing-card" style="border: 2px solid var(--accent-orange); position: relative;">
     <div style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); background: linear-gradient(135deg, var(--accent-orange), var(--accent-purple)); color: white; padding: 4px 20px; border-radius: 100px; font-size: 12px; font-weight: 600; z-index: 100;">
         MOST POPULAR
     </div>
@@ -2513,6 +2513,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
