--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             content: 'BEST VALUE';
             position: absolute;
             top: 20px;
-            right: -30px;
+            left: -30px;
             background: var(--accent-purple);
             color: white;
             padding: 4px 40px;
@@ -2513,6 +2513,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
