--- a/index.html
+++ b/index.html
@@ -1476,11 +1476,11 @@ let isDeleting = false;
 let isTypingActive = true;
 
 const questions = [
-    "How do I balance H₂ + O₂ → H₂O?",
-    "What is photosynthesis?", 
-    "Explain Newton's first law",
-    "How do enzymes work?",
-    "What causes chemical bonds?"
+    "What phase of mitosis id characterized by the alignment of chromosomes on the cell's equator?",
+    "Balance the following chemical equation: H₂ + O₂ → H₂O?",
+    "An airplane accelerates down a runway at 3.20 m/s2 for 32.8 s until is finally lifts off the ground. Determine the distance traveled before takeoff.", 
+    "Use Rolles theorem to derive the mean value theorem.",
+    "Explain what changes and what stays the same when 1.00 L of a solution of NaCl is diluted to 1.80 L.",
 ];
 
 function startTypingAnimation() {
@@ -2513,6 +2513,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
