--- a/index.html
+++ b/index.html
@@ -1546,6 +1546,107 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     cursor: not-allowed;
     opacity: 0.6;
 }
+
+/* Test Generator Styles */
+.test-generator-section {
+    background: var(--bg-secondary);
+    border: 1px solid var(--border-primary);
+    box-shadow: var(--shadow-xl);
+    border-radius: 16px;
+    margin: 40px auto;
+    padding: 32px;
+    max-width: 800px;
+}
+
+.test-progress {
+    margin-bottom: 24px;
+    text-align: center;
+}
+
+.progress-bar {
+    width: 100%;
+    height: 8px;
+    background: var(--bg-tertiary);
+    border-radius: 4px;
+    margin-top: 12px;
+    overflow: hidden;
+}
+
+.progress-fill {
+    height: 100%;
+    background: linear-gradient(135deg, var(--accent-orange), var(--accent-purple));
+    transition: width 0.3s ease;
+    width: 10%;
+}
+
+.question-display h3 {
+    color: var(--text-primary);
+    margin-bottom: 20px;
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.answer-box {
+    width: 100%;
+    min-height: 150px;
+    padding: 16px;
+    border: 1px solid var(--border-primary);
+    border-radius: 12px;
+    font-size: 15px;
+    background: var(--bg-tertiary);
+    margin-bottom: 20px;
+    resize: vertical;
+}
+
+.test-navigation {
+    display: flex;
+    justify-content: space-between;
+    gap: 12px;
+}
+
+.grade-display {
+    text-align: center;
+    margin: 32px 0;
+}
+
+.grade-circle {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 48px;
+    font-weight: 700;
+    background: linear-gradient(135deg, var(--accent-orange), var(--accent-purple));
+    color: white;
+    box-shadow: var(--shadow-lg);
+}
+
+.grade-letter {
+    font-size: 72px;
+    font-weight: 700;
+    margin-top: 20px;
+    background: linear-gradient(135deg, var(--accent-orange), var(--accent-purple));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.incorrect-answers {
+    margin-top: 24px;
+    text-align: left;
+}
+
+.incorrect-item {
+    background: var(--bg-tertiary);
+    padding: 16px;
+    border-radius: 8px;
+    margin-bottom: 12px;
+    border-left: 4px solid var(--error);
+}
+
+    
 </style>
 
 <script>
@@ -2607,6 +2708,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
