--- a/index.html
+++ b/index.html
@@ -1093,21 +1093,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </section>
 
-        <!-- Test Generator Section (Hidden by default) -->
-<section class="test-generator-section" id="testGenerator" style="display: none;">
-    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 24px;">
-        <h2>📝 Test Generator</h2>
-        <button class="btn btn-secondary" onclick="hideTestGenerator()">← Back to Dashboard</button>
-    </div>
-    
-    <!-- Rest of your test generator HTML here -->
-    <div id="testSetup" class="test-setup">
-        <!-- All the test generator content from my previous message -->
-    </div>
-</section>
+        
 
         <!-- Test Generator Section -->
-<section class="test-generator-section" id="testGenerator">
+<section class="test-generator-section" id="testGenerator" style="display: none;>
     <div class="test-generator-header">
         <h2>📝 Free Test Generator</h2>
         <p>Create a custom practice test from your study materials</p>
@@ -2987,6 +2976,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
