--- a/index.html
+++ b/index.html
@@ -2883,7 +2883,7 @@ async function callSecureAPI(question, imageFile) {
     });
           
     // Show test generator button for logged-in users
-    showTestGeneratorButton();
+    //showTestGeneratorButton();
     }
 
    function updateQuestionCount() {
@@ -2976,6 +2976,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
