--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="stat-number" id="questionsRemaining">3</div>
             <div class="stat-label">Questions remaining</div>
         </div>
-                <div style="text-align: center; margin-top: 32px;">
+                <div style="text-align: center; margin-top: 32px; display: none;">
         <button class="btn btn-primary" onclick="showTestGenerator()" style="padding: 14px 32px; font-size: 16px;">
             📝 Open Test Generator (Free!)
         </button>
@@ -2976,6 +2976,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
