--- a/index.html
+++ b/index.html
@@ -2535,7 +2535,7 @@ async function callSecureAPI(question, imageFile) {
     // If user is logged in, redirect to pricing section to choose a plan
     hideSubscriptionModal();
     document.getElementById('pricing').scrollIntoView({ behavior: 'smooth' });
-    showAlert('Please select a plan below', 'success');
+    showAlert('Please subscribe to continue', 'success');
 }
 
 
@@ -2976,6 +2976,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
