--- a/index.html
+++ b/index.html
@@ -2526,7 +2526,7 @@ function showTestGeneratorButton() {
 }
             
             // Check question limits
-if (currentUser && currentUser.subscribed && currentUser.plan_type === 'basic' {
+if (currentUser && currentUser.subscribed && currentUser.plan_type === 'basic') {
     showTrialExpiredModal();
     return;
 }
@@ -3190,6 +3190,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
