--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     }
 }
 </style>
-            <a href="#" class="btn btn-primary" onclick="showModal('signup'); return false;">⇩Try it now⇩</a>
+            <a href="#" class="btn btn-primary" onclick="showModal('signup'); return false;">⇩  Try it now!  ⇩</a>
         </section>
 
         <!-- User Dashboard -->
@@ -3197,6 +3197,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </body>
 
 </html>
+
 
 
 
